--- a/front/index.html
+++ b/front/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg" href="public/maison.png" />
+    <link rel="icon" type="image/svg" href="public/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kasa</title>
   </head>
